--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "import re\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.tokenize import MWETokenizer #tiene conto delle multiword expressions"
+    "from nltk.tokenize import MWETokenizer #tiene conto delle multiword expressions\n",
+    "from nltk.corpus import wordnet as wn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +36,13 @@
     "mwes = [x for x in wn.all_lemma_names() if '_' in x]\n",
     "mwes = [tuple(x.split('_')) for x in mwes]\n",
     "tokenizer = MWETokenizer(mwes, separator=' ')\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "def pre_processing(document):\n",
     "    document = re.sub(r'[^\\w\\s]',' ',document) #remove punctuation\n",
     "    document = document.lower()\n",
-    "    document = word_tokenize(document)\n",
-    "    document = [lemmatizer.lemmatize(token) for token in document]    \n",
+    "    document = tokenizer.tokenize(document.split())\n",
+    "    document = [lemmatizer.lemmatize(token) for token in document]  \n",
     "    document = [w for w in document if not w in stop_words]\n",
     "    return document"
    ]
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +244,7 @@
        "4           twelve_69.88  semiperfect_58.71  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,16 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['napoleon', 'bonaparte', 'born', 'napoleone', 'buonaparte', 'wa', 'french', 'statesman', 'and', 'military', 'leader', 'who', 'rose', 'to', 'prominence', 'during', 'the', 'french', 'revolution', 'and', 'led', 'several', 'successful', 'campaign', 'during', 'the', 'french', 'revolutionary', 'war'], ['he', 'wa', 'emperor', 'of', 'the', 'french', 'napoleon', 'from', '1804', 'until', '1814', 'and', 'again', 'briefly', '1815', 'during', 'the', 'hundred', 'day', 'napoleon', 'dominated', 'european', 'and', 'global', 'affair', 'for', 'more', 'than', 'decade', 'while', 'leading', 'france', 'against', 'series', 'of', 'coalition', 'the', 'napoleonic', 'war']]\n",
-      "['napoleon', 'bonaparte', 'born', 'napoleone', 'buonaparte', 'wa', 'french', 'statesman', 'and', 'military', 'leader', 'who', 'rose', 'to', 'prominence', 'during', 'the', 'french', 'revolution', 'and', 'led', 'several', 'successful', 'campaign', 'during', 'the', 'french', 'revolutionary', 'war']\n",
-      "['he', 'wa', 'emperor', 'of', 'the', 'french', 'napoleon', 'from', '1804', 'until', '1814', 'and', 'again', 'briefly', '1815', 'during', 'the', 'hundred', 'day', 'napoleon', 'dominated', 'european', 'and', 'global', 'affair', 'for', 'more', 'than', 'decade', 'while', 'leading', 'france', 'against', 'series', 'of', 'coalition', 'the', 'napoleonic', 'war']\n"
+      "['napoleone', 'bonaparte']\n",
+      "['napoleon bonaparte', 'born', 'napoleone', 'di', 'buonaparte', 'wa', 'french', 'statesman', 'military leader', 'rose', 'prominence', 'french revolution', 'led', 'several', 'successful', 'campaign', 'french', 'revolutionary', 'war']\n",
+      "['wa', 'emperor', 'french', 'napoleon i', '1804', '1814', 'briefly', '1815', 'hundred', 'day', 'napoleon', 'dominated', 'european', 'global', 'affair', 'more than', 'decade', 'leading', 'france', 'series', 'coalition', 'napoleonic wars']\n"
      ]
     }
    ],
@@ -271,93 +273,35 @@
     "text = open('data/docs/Napoleon-wiki-test.txt', 'r').read().split('\\n')\n",
     "text = [line for line in text if line != '']\n",
     "\n",
-    "\n",
-    "text_preprocessed = [pre_processing(line) for line in text[1:]]\n",
-    "print(text_preprocessed)\n",
-    "\n",
+    "text_preprocessed = [pre_processing(line) for line in text[0:]]\n",
     "for line in text_preprocessed:\n",
-    "    print(line)"
+    "    for word in line:\n",
+    "        if word not in nasari_vectors[0].values:\n",
+    "            line.remove(word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bn:00028039n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import requests\n",
+    "#import requests\n",
     "\n",
-    "babelnet_token = '1e258739-f5e4-4961-8267-a2da4fe94572'\n",
-    "word = 'dog'\n",
-    "response = requests.get(f'https://babelnet.io/v8/getSynsetIds?lemma={word}&searchLang=EN&key={babelnet_token}')\n",
-    "babelnet_id = response.json()[0]['id']\n",
-    "print(babelnet_id)"
+    "#babelnet_token = '1e258739-f5e4-4961-8267-a2da4fe94572'\n",
+    "#word = 'dog'\n",
+    "#response = requests.get(f'https://babelnet.io/v8/getSynsetIds?lemma={word}&searchLang=EN&key={babelnet_token}')\n",
+    "#babelnet_id = response.json()[0]['id']\n",
+    "#print(babelnet_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 'bn:00028039n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00015267n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:29719123a', 'pos': 'ADJ', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:17221039n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00930504n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03461854n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:06689962n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:02131177n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00960609n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:01487473n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00028041n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03554097n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03572333n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00003955n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:23577161n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00046038n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03082162n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:16042752n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:02510393n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:02285691n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03597626n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03820373n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00019757n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:04048779n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00868559n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:28081406n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:02695459n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00028040n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:26651522n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:21742940n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:03005278n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00011025n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00084831v', 'pos': 'VERB', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:02634655n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:21782281n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00718916n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:15916695n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:01262627n', 'pos': 'NOUN', 'source': 'BABELNET'},\n",
-       " {'id': 'bn:00015259n', 'pos': 'NOUN', 'source': 'BABELNET'}]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response.json()"
+    "#response.json()"
    ]
   },
   {
