--- a/Esercizio 1/wsd.ipynb
+++ b/Esercizio 1/wsd.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "Implementare l’algoritmo di Lesk (!= usare implementazione esistente, e.g., in nltk…).\n",
     "- Estrarre 50 frasi dal corpus SemCor (corpus annotato con i synset di WN) e disambiguare (almeno) un sostantivo per frase. Calcolare l’accuratezza del sistema implementato sulla base dei sensi annotati in SemCor (SemCor è disponibile all’URL http://web.eecs.umich.edu/~mihalcea/downloads.html)\n",
-    "- Randomizzare la selezione delle 50 frasi e la selezione del termine da disambiguare, e restituire l’accuratezza media su (per esempio) 10 esecuzioni del programma"
+    "- Randomizzare la selezione delle 50 frasi e la selezione del termine da disambiguare, e restituire l’accuratezza media su (per esempio) 10 esecuzioni del programma\n",
+    "\n",
+    "Opzionale: implementare corpus_lesk_algorithm utilizando semCor"
    ]
   },
   {
@@ -26,7 +28,48 @@
     "from nltk.corpus import semcor\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "stop_words = set(stopwords.words('english'))\n"
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', 'Friday', 'an', 'investigation', 'of', 'Atlanta', \"'s\", 'recent', 'primary', 'election', 'produced', '``', 'no', 'evidence', \"''\", 'that', 'any', 'irregularities', 'took', 'place', '.'], ['The', 'jury', 'further', 'said', 'in', 'term', 'end', 'presentments', 'that', 'the', 'City', 'Executive', 'Committee', ',', 'which', 'had', 'over-all', 'charge', 'of', 'the', 'election', ',', '``', 'deserves', 'the', 'praise', 'and', 'thanks', 'of', 'the', 'City', 'of', 'Atlanta', \"''\", 'for', 'the', 'manner', 'in', 'which', 'the', 'election', 'was', 'conducted', '.'], ...]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#show semcore\n",
+    "semcor.sents()[:100]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['The'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['Fulton', 'County', 'Grand', 'Jury'])]), Tree(Lemma('state.v.01.say'), ['said']), Tree(Lemma('friday.n.01.Friday'), ['Friday']), ['an'], Tree(Lemma('probe.n.01.investigation'), ['investigation']), ['of'], Tree(Lemma('atlanta.n.01.Atlanta'), ['Atlanta']), [\"'s\"], Tree(Lemma('late.s.03.recent'), ['recent']), Tree(Lemma('primary.n.01.primary_election'), ['primary', 'election']), Tree(Lemma('produce.v.04.produce'), ['produced']), ['``'], ['no'], Tree(Lemma('evidence.n.01.evidence'), ['evidence']), [\"''\"], ['that'], ['any'], Tree(Lemma('abnormality.n.04.irregularity'), ['irregularities']), Tree(Lemma('happen.v.01.take_place'), ['took', 'place']), ['.']], [['The'], Tree(Lemma('jury.n.01.jury'), ['jury']), Tree(Lemma('far.r.02.far'), ['further']), Tree(Lemma('state.v.01.say'), ['said']), ['in'], Tree(Lemma('term.n.02.term'), ['term']), Tree(Lemma('end.n.02.end'), ['end']), Tree(Lemma('presentment.n.01.presentment'), ['presentments']), ['that'], ['the'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['City', 'Executive', 'Committee'])]), [','], ['which'], Tree(Lemma('own.v.01.have'), ['had']), Tree(Lemma('overall.s.02.overall'), ['over-all']), Tree(Lemma('mission.n.03.charge'), ['charge']), ['of'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), [','], ['``'], Tree(Lemma('deserve.v.01.deserve'), ['deserves']), ['the'], Tree(Lemma('praise.n.01.praise'), ['praise']), ['and'], Tree(Lemma('thanks.n.01.thanks'), ['thanks']), ['of'], ['the'], Tree(Lemma('location.n.01.location'), [Tree('NE', ['City', 'of', 'Atlanta'])]), [\"''\"], ['for'], ['the'], Tree(Lemma('manner.n.01.manner'), ['manner']), ['in'], ['which'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), ['was'], Tree(Lemma('conduct.v.01.conduct'), ['conducted']), ['.']], ...]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semcor.tagged_sents(tag = 'sem')[:100]"
    ]
   },
   {
@@ -57,7 +100,21 @@
     "            max_overlap = overlap\n",
     "            best_sense = sense\n",
     "    \n",
-    "    return best_sense"
+    "    return best_sense\n",
+    "\n",
+    "def corpus_lesk(corpus):\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    \n",
+    "    for sent in corpus.tagged_sents(tag='sem'):\n",
+    "        sentence = lemma_list(sent)\n",
+    "        for i, (word, tag) in enumerate(sent):\n",
+    "            if tag is not None and word not in stop_words:\n",
+    "                total += 1\n",
+    "                if SimplifiedLesk(word, sentence) == sent[i].label():\n",
+    "                    correct += 1\n",
+    "    \n",
+    "    return correct/total"
    ]
   },
   {
@@ -69,205 +126,205 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mayor\n",
-      "Synset('mayor.n.01')\n",
-      "[Lemma('person.n.01.person')]\n",
+      "filed\n",
+      "Synset('file.v.05')\n",
+      "[Lemma('file.v.01.file')]\n",
       "-----------------\n",
       "Many\n",
       "Synset('many.a.01')\n",
       "[Lemma('many.a.01.many')]\n",
       "-----------------\n",
-      "reports\n",
-      "Synset('report.n.02')\n",
-      "[Lemma('report.n.03.report')]\n",
+      "possible\n",
+      "Synset('possible.a.01')\n",
+      "[Lemma('potential.a.01.possible')]\n",
       "-----------------\n",
-      "million\n",
-      "Synset('million.n.01')\n",
-      "[Lemma('million.n.01.million')]\n",
+      "issue\n",
+      "Synset('issue.n.04')\n",
+      "[Lemma('issue.n.01.issue')]\n",
       "-----------------\n",
-      "Felix\n",
-      "None\n",
-      "[Lemma('person.n.01.person')]\n",
+      "new\n",
+      "Synset('fresh.s.04')\n",
+      "[Lemma('new.a.01.new')]\n",
       "-----------------\n",
-      "committee\n",
-      "Synset('committee.n.01')\n",
-      "[Lemma('committee_member.n.01.committee_member')]\n",
+      "witnesses\n",
+      "Synset('spectator.n.01')\n",
+      "[Lemma('witness.n.01.witness')]\n",
       "-----------------\n",
-      "place\n",
-      "Synset('topographic_point.n.01')\n",
-      "[Lemma('put.v.01.place')]\n",
-      "-----------------\n",
-      "raises\n",
-      "Synset('raise.n.03')\n",
-      "[Lemma('raise.n.01.raise')]\n",
-      "-----------------\n",
-      "visit\n",
-      "Synset('visit.n.02')\n",
-      "[Lemma('visit.n.01.visit')]\n",
-      "-----------------\n",
-      "committee\n",
-      "Synset('committee.n.01')\n",
-      "[Lemma('committee.n.01.committee')]\n",
-      "-----------------\n",
-      "legislators\n",
-      "Synset('legislator.n.01')\n",
-      "[Lemma('legislator.n.01.legislator')]\n",
-      "-----------------\n",
-      "rules\n",
-      "Synset('principle.n.01')\n",
-      "[Lemma('rule.n.03.rule')]\n",
-      "-----------------\n",
-      "saw\n",
-      "Synset('saw.v.01')\n",
-      "[Lemma('witness.v.02.see')]\n",
-      "-----------------\n",
-      "Fulton\n",
-      "Synset('fulton.n.01')\n",
-      "[Lemma('location.n.01.location'), Lemma('location.n.01.location')]\n",
-      "-----------------\n",
-      "reduce\n",
-      "Synset('deoxidize.v.01')\n",
-      "[Lemma('reduce.v.01.reduce')]\n",
-      "-----------------\n",
-      "upon\n",
-      "None\n",
-      "[]\n",
-      "-----------------\n",
-      "On\n",
-      "Synset('on.a.01')\n",
-      "[None]\n",
-      "-----------------\n",
-      "Fulton\n",
-      "Synset('fulton.n.01')\n",
-      "[Lemma('location.n.01.location')]\n",
-      "-----------------\n",
-      "said\n",
-      "Synset('suppose.v.01')\n",
-      "[Lemma('allege.v.01.say')]\n",
-      "-----------------\n",
-      "personnel\n",
-      "Synset('personnel_department.n.01')\n",
-      "[Lemma('force.n.04.personnel'), Lemma('force.n.04.personnel')]\n",
-      "-----------------\n",
-      "force\n",
-      "Synset('force_out.n.01')\n",
-      "[Lemma('coerce.v.01.force')]\n",
-      "-----------------\n",
-      "day\n",
-      "Synset('sidereal_day.n.01')\n",
-      "[Lemma('monday.n.01.Monday'), Lemma('friday.n.01.Friday'), Lemma('day.n.01.day')]\n",
-      "-----------------\n",
-      "number\n",
-      "Synset('phone_number.n.01')\n",
-      "[Lemma('number.n.02.number')]\n",
-      "-----------------\n",
-      "Georgia\n",
-      "Synset('georgia.n.02')\n",
-      "[Lemma('georgia.n.01.Georgia')]\n",
-      "-----------------\n",
-      "race\n",
-      "Synset('race.n.03')\n",
-      "[Lemma('race.n.01.race')]\n",
-      "-----------------\n",
-      "Garland\n",
-      "Synset('wreath.n.01')\n",
-      "[Lemma('person.n.01.person')]\n",
-      "-----------------\n",
-      "accepted\n",
-      "Synset('bear.v.06')\n",
-      "['accepted.s.00']\n",
-      "-----------------\n",
-      "violate\n",
-      "Synset('desecrate.v.01')\n",
-      "[Lemma('transgress.v.01.violate')]\n",
-      "-----------------\n",
-      "phone\n",
-      "Synset('telephone.n.01')\n",
-      "[Lemma('call.n.01.phone_call')]\n",
-      "-----------------\n",
-      "votes\n",
-      "Synset('vote.n.01')\n",
-      "[Lemma('vote.n.02.vote')]\n",
-      "-----------------\n",
-      "roads\n",
-      "Synset('roads.n.01')\n",
-      "[Lemma('road.n.01.road')]\n",
-      "-----------------\n",
-      "liquor\n",
-      "Synset('liquor.n.02')\n",
-      "[Lemma('liquor.n.01.liquor')]\n",
-      "-----------------\n",
-      "protests\n",
-      "Synset('protest.n.02')\n",
-      "[Lemma('protest.n.01.protest')]\n",
-      "-----------------\n",
-      "past\n",
-      "Synset('past.n.03')\n",
-      "[Lemma('past.n.01.past')]\n",
-      "-----------------\n",
-      "coordinator\n",
-      "Synset('coordinator.n.01')\n",
-      "[Lemma('coordinator.n.01.coordinator')]\n",
-      "-----------------\n",
-      "charged\n",
-      "Synset('charge.v.01')\n",
-      "[Lemma('charge.v.06.charge')]\n",
-      "-----------------\n",
-      "committee\n",
-      "Synset('committee.n.01')\n",
-      "[]\n",
-      "-----------------\n",
-      "Meanwhile\n",
-      "Synset('interim.n.01')\n",
-      "[Lemma('meanwhile.r.01.meanwhile')]\n",
-      "-----------------\n",
-      "whether\n",
-      "None\n",
-      "[None, None]\n",
-      "-----------------\n",
-      "After\n",
-      "Synset('after.r.02')\n",
-      "[None]\n",
-      "-----------------\n",
-      "presentments\n",
-      "Synset('presentment.n.01')\n",
-      "[Lemma('presentment.n.01.presentment')]\n",
-      "-----------------\n",
-      "bonds\n",
-      "Synset('bond.n.02')\n",
-      "[Lemma('bond.n.02.bond')]\n",
-      "-----------------\n",
-      "rally\n",
-      "Synset('rally.n.01')\n",
-      "[Lemma('rally.n.01.rally')]\n",
-      "-----------------\n",
-      "chairman\n",
-      "Synset('chair.v.01')\n",
-      "[Lemma('president.n.04.chairman')]\n",
-      "-----------------\n",
-      "inadequate\n",
-      "Synset('inadequate.a.01')\n",
-      "[Lemma('inadequate.a.01.inadequate')]\n",
+      "taxpayers\n",
+      "Synset('taxpayer.n.01')\n",
+      "[Lemma('taxpayer.n.01.taxpayer')]\n",
       "-----------------\n",
       "funds\n",
       "Synset('funds.n.01')\n",
       "[Lemma('fund.n.01.fund')]\n",
       "-----------------\n",
-      "guardians\n",
-      "Synset('defender.n.01')\n",
-      "[Lemma('defender.n.01.guardian')]\n",
+      "traditional\n",
+      "Synset('traditional.s.02')\n",
+      "[Lemma('traditional.a.01.traditional')]\n",
       "-----------------\n",
-      "candidate\n",
-      "Synset('campaigner.n.01')\n",
-      "[Lemma('campaigner.n.01.candidate')]\n",
+      "Texas\n",
+      "Synset('texas.n.01')\n",
+      "[Lemma('texas.n.01.Texas')]\n",
       "-----------------\n",
-      "expires\n",
-      "Synset('run_out.v.04')\n",
-      "[Lemma('run_out.v.04.expire')]\n",
+      "Senate\n",
+      "Synset('united_states_senate.n.01')\n",
+      "[Lemma('senate.n.01.senate')]\n",
       "-----------------\n",
-      "revised\n",
-      "Synset('retool.v.01')\n",
-      "[Lemma('revise.v.01.revise')]\n",
+      "went\n",
+      "Synset('go.v.10')\n",
+      "[Lemma('go.v.02.go')]\n",
+      "-----------------\n",
+      "This\n",
+      "None\n",
+      "[None]\n",
+      "-----------------\n",
+      "items\n",
+      "Synset('item.n.01')\n",
+      "[Lemma('detail.n.01.item')]\n",
+      "-----------------\n",
+      "reduce\n",
+      "Synset('deoxidize.v.01')\n",
+      "[Lemma('reduce.v.01.reduce')]\n",
+      "-----------------\n",
+      "amicable\n",
+      "Synset('amicable.a.01')\n",
+      "[Lemma('amicable.a.01.amicable')]\n",
+      "-----------------\n",
+      "jury\n",
+      "Synset('jury.n.01')\n",
+      "[Lemma('jury.n.01.jury')]\n",
+      "-----------------\n",
+      "fair\n",
+      "Synset('carnival.n.03')\n",
+      "['fair.a.00']\n",
+      "-----------------\n",
+      "man\n",
+      "Synset('man.n.06')\n",
+      "[Lemma('marriage.n.02.man_and_wife')]\n",
+      "-----------------\n",
+      "city\n",
+      "Synset('city.n.03')\n",
+      "[Lemma('city.n.02.city')]\n",
+      "-----------------\n",
+      "Blue\n",
+      "Synset('blue.s.01')\n",
+      "[Lemma('location.n.01.location')]\n",
+      "-----------------\n",
+      "resolution\n",
+      "Synset('resolving_power.n.01')\n",
+      "[Lemma('resolution.n.01.resolution')]\n",
+      "-----------------\n",
+      "reports\n",
+      "Synset('report.n.01')\n",
+      "[Lemma('report.n.03.report')]\n",
+      "-----------------\n",
+      "none\n",
+      "Synset('none.n.01')\n",
+      "[None]\n",
+      "-----------------\n",
+      "asked\n",
+      "Synset('ask.v.02')\n",
+      "[Lemma('ask.v.01.ask')]\n",
+      "-----------------\n",
+      "State\n",
+      "Synset('state.n.02')\n",
+      "[Lemma('group.n.01.group')]\n",
+      "-----------------\n",
+      "accepted\n",
+      "Synset('bear.v.06')\n",
+      "['accepted.s.00']\n",
+      "-----------------\n",
+      "force\n",
+      "Synset('force_out.n.01')\n",
+      "[Lemma('coerce.v.01.force')]\n",
+      "-----------------\n",
+      "phone\n",
+      "Synset('telephone.n.01')\n",
+      "[Lemma('call.n.01.phone_call')]\n",
+      "-----------------\n",
+      "Saturday\n",
+      "Synset('saturday.n.01')\n",
+      "[Lemma('saturday.n.01.Saturday')]\n",
+      "-----------------\n",
+      "roads\n",
+      "Synset('roads.n.01')\n",
+      "[Lemma('road.n.01.road')]\n",
+      "-----------------\n",
+      "bit\n",
+      "Synset('bit.n.10')\n",
+      "[]\n",
+      "-----------------\n",
+      "despite\n",
+      "Synset('contempt.n.01')\n",
+      "[None]\n",
+      "-----------------\n",
+      "County\n",
+      "Synset('county.n.01')\n",
+      "[Lemma('location.n.01.location')]\n",
+      "-----------------\n",
+      "When\n",
+      "None\n",
+      "[None]\n",
+      "-----------------\n",
+      "His\n",
+      "None\n",
+      "[None]\n",
+      "-----------------\n",
+      "interim\n",
+      "Synset('interim.n.01')\n",
+      "[Lemma('interim.s.01.interim')]\n",
+      "-----------------\n",
+      "Highway\n",
+      "Synset('highway.n.01')\n",
+      "[Lemma('group.n.01.group')]\n",
+      "-----------------\n",
+      "vote\n",
+      "Synset('vote.n.01')\n",
+      "[Lemma('vote.n.01.vote')]\n",
+      "-----------------\n",
+      "policeman\n",
+      "Synset('policeman.n.01')\n",
+      "[Lemma('policeman.n.01.policeman')]\n",
+      "-----------------\n",
+      "City\n",
+      "Synset('city.n.01')\n",
+      "[Lemma('group.n.01.group'), Lemma('location.n.01.location')]\n",
+      "-----------------\n",
+      "Department\n",
+      "Synset('department.n.02')\n",
+      "[Lemma('group.n.01.group')]\n",
+      "-----------------\n",
+      "James\n",
+      "Synset('james.n.04')\n",
+      "[Lemma('person.n.01.person')]\n",
+      "-----------------\n",
+      "said\n",
+      "Synset('pronounce.v.01')\n",
+      "[Lemma('state.v.01.say')]\n",
+      "-----------------\n",
+      "election\n",
+      "Synset('election.n.01')\n",
+      "[Lemma('election.n.01.election')]\n",
+      "-----------------\n",
+      "receive\n",
+      "Synset('receive.v.12')\n",
+      "[Lemma('receive.v.01.receive')]\n",
+      "-----------------\n",
+      "fees\n",
+      "Synset('tip.v.03')\n",
+      "[Lemma('fee.n.01.fee')]\n",
+      "-----------------\n",
+      "Republicans\n",
+      "Synset('republican.n.02')\n",
+      "[Lemma('republican.n.01.Republican')]\n",
+      "-----------------\n",
+      "term\n",
+      "Synset('term.n.02')\n",
+      "[Lemma('tenure.n.01.term_of_office')]\n",
+      "-----------------\n",
+      "laws\n",
+      "Synset('jurisprudence.n.01')\n",
+      "[Lemma('law.n.02.law')]\n",
       "-----------------\n"
      ]
     }
