--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -434,7 +434,7 @@
    "source": [
     "## Pesatura dei paragrafi\n",
     "\n",
-    "Eseguita usanto la metrica Weighted Oveerlap"
+    "Eseguita usanto la metrica Weighted Overlap"
    ]
   },
   {
