[ADD] corpus lesk

--- a/Esercizio 1/wsd.ipynb
+++ b/Esercizio 1/wsd.ipynb
@@ -105,12 +105,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "def get_context_from_semcor(target_sense):\n",
+    "    sentences = []\n",
+    "    for fileid in semcor.fileids():\n",
+    "        for sent in semcor.tagged_sents(fileid, 'both'):\n",
+    "            for word, pos, _, synset in sent:\n",
+    "                if synset and synset == target_sense:\n",
+    "                    sentences.append([word for (word, _, _) in sent])\n",
+    "    return set(preprocessing(' '.join(sentences)))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def SimplifiedLesk(word, sentence):\n",
-    "    best_sense = wn.synsets(word)[0] if len(wn.synsets(word)) > 0 else None\n",
+    "    best_sense = wn.synsets(word)[0] if len(wn.synsets(word)) > 0 else None #wordnet ordina i sysnet in base alla frequenza\n",
     "    max_overlap = 0\n",
     "    context = set(sentence)\n",
     "    \n",
@@ -123,107 +141,48 @@
     "    \n",
     "    return best_sense\n",
     "\n",
-    "def corpus_lesk(corpus):\n",
-    "    correct = 0\n",
-    "    total = 0\n",
+    "def corpus_lesk(word, sentence):\n",
+    "    best_sense = wn.synsets(word)[0] if len(wn.synsets(word)) > 0 else None #wordnet ordina i sysnet in base alla frequenza\n",
+    "    max_overlap = 0\n",
+    "    context = set(sentence)\n",
     "    \n",
-    "    for sent in corpus.tagged_sents(tag='sem'):\n",
-    "        sentence = lemma_list(sent)\n",
-    "        for i, (word, tag) in enumerate(sent):\n",
-    "            if tag is not None and word not in stop_words:\n",
-    "                total += 1\n",
-    "                if SimplifiedLesk(word, sentence) == sent[i].label():\n",
-    "                    correct += 1\n",
-    "    \n",
-    "    return correct/total"
+    "    for sense in wn.synsets(word):\n",
+    "        signature = set(preprocessing(sense.definition())).union(set(preprocessing(' '.join(sense.examples()))))\n",
+    "        signature = signature.union(get_context_from_semcor(sense))\n",
+    "        overlap = len(context.intersection(signature))\n",
+    "        if overlap > max_overlap:\n",
+    "            max_overlap = overlap\n",
+    "            best_sense = sense\n",
+    "\n",
+    "    return best_sense"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def isCorrect(predicted_synset, actual_synset):\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pearl\n",
-      "Synset('pearl.n.01')\n",
-      "Synset('person.n.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "Williams\n",
-      "Synset('williams.n.01')\n",
-      "Synset('person.n.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "term\n",
-      "Synset('term.n.01')\n",
-      "Synset('term.n.02')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "bond\n",
-      "Synset('bond.v.03')\n",
-      "Synset('bond.n.02')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "agriculture\n",
-      "Synset('agribusiness.n.01')\n",
-      "Synset('agribusiness.n.01')\n",
-      "correct:  True\n",
-      "-----------------\n",
-      "taunted\n",
-      "Synset('tease.v.02')\n",
-      "Synset('tease.v.02')\n",
-      "correct:  True\n",
-      "-----------------\n",
-      "continue\n",
-      "Synset('retain.v.02')\n",
-      "Synset('continue.v.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "teacher\n",
-      "Synset('teacher.n.02')\n",
-      "Synset('teacher.n.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "expected\n",
-      "Synset('expect.v.03')\n",
-      "Synset('expect.v.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "told\n",
-      "Synset('tell.v.03')\n",
-      "Synset('state.v.01')\n",
-      "correct:  False\n",
-      "-----------------\n",
-      "study\n",
-      "Synset('sketch.n.01')\n",
-      "Synset('survey.n.01')\n",
-      "correct:  False\n",
-      "-----------------\n"
+      "cell label:  Lemma('person.n.01.person')\n",
+      "cell label:  Lemma('person.n.01.person')\n",
+      "random word:  Hartsfield\n",
+      "predicted:  None\n",
+      "actual:  Synset('person.n.01')\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute '_name'",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_5944\\1625356229.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     29\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mrandom_word\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mcell\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     30\u001B[0m             \u001B[0mlabel\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcell\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlabel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0misinstance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mcell\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mnltk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtree\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mTree\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32melse\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 31\u001B[1;33m             \u001B[0mlabel\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlabel\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"'\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     32\u001B[0m             \u001B[0mactual_synset\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mwn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msynset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'.'\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlabel\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\".\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     33\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mIndexError\u001B[0m: list index out of range"
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_12464\\2146551492.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     40\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'predicted: '\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpredicted_synset\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     41\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'actual: '\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mactual_synset\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 42\u001B[1;33m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"correct: \"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpredicted_synset\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mactual_synset\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     43\u001B[0m     \u001B[0mnum_correct\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[0mpredicted_synset\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mactual_synset\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     44\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'-----------------'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\nltk\\corpus\\reader\\wordnet.py\u001B[0m in \u001B[0;36m__eq__\u001B[1;34m(self, other)\u001B[0m\n\u001B[0;32m    203\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    204\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m__eq__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mother\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 205\u001B[1;33m         \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_name\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mother\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_name\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    206\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    207\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m__ne__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mother\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'NoneType' object has no attribute '_name'"
      ]
     }
    ],
@@ -240,6 +199,7 @@
     "\n",
     "#print(my_sentences_with_tag[0])\n",
     "#print(my_sentences[0])\n",
+    "num_correct = 0\n",
     "\n",
     "for i, sentence in enumerate(my_sentences):\n",
     "    #lowercase\n",
@@ -258,21 +218,38 @@
     "    for j, cell in enumerate(my_sentences_with_tag[i]):\n",
     "        if random_word in cell[0]:\n",
     "            label = cell.label() if isinstance(cell, nltk.tree.Tree) else None\n",
-    "            label = str(label).split(\"'\")[1]\n",
-    "            actual_synset.append(wn.synset('.'.join(str(label).split(\".\")[:-1])))\n",
+    "            if label:\n",
+    "                print('cell label: ', label)\n",
+    "                label = str(label).split(\"'\")[1]\n",
+    "                actual_synset.append(wn.synset('.'.join(str(label).split(\".\")[:-1])))\n",
     "\n",
     "    #run lesk\n",
-    "    predicted_synset = SimplifiedLesk(random_word, sentence)\n",
-    "    print(random_word)\n",
-    "    print(predicted_synset)\n",
-    "    print(actual_synset[0])\n",
+    "    predicted_synset = corpus_lesk(random_word, sentence)\n",
+    "    print('random word: ', random_word)\n",
+    "    print('predicted: ', predicted_synset)\n",
+    "    print('actual: ', actual_synset[0])\n",
     "    print(\"correct: \", predicted_synset == actual_synset[0])\n",
-    "    print('-----------------')"
+    "    num_correct += predicted_synset == actual_synset[0]\n",
+    "    print('-----------------')\n",
+    "\n",
+    "print('accuracy: ',num_correct/len(my_sentences))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "outputs": [],
    "source": [],
    "metadata": {
